[package]
name = "yahf"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Yet Another HTTP Framework focused on DX"
repository = "https://github.com/lucasduartesobreira/yahf"
readme = "README.md"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
keywords = ["http", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }

[profile.release]
debug = true
